@@ -19,10 +19,11 @@
 package io.mandrel.data.content.selector;
 
 import io.mandrel.data.content.selector.Selector.Instance;
-import io.mandrel.http.WebPage;
+import io.mandrel.requests.Metadata;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.List;
 
 import org.assertj.core.api.Assertions;
@@ -33,12 +34,12 @@ import us.codecraft.xsoup.xevaluator.XElement;
 public class XpathSelectorTest {
 
 	@Test
-	public void test() throws MalformedURLException {
+	public void test() throws MalformedURLException, URISyntaxException {
 
 		XpathSelector selector = new XpathSelector();
 
 		byte[] data = "<a href='/test'>épatant</a>".getBytes();
-		WebPage webPage = new WebPage().setUrl(new URL("http://localhost"));
+		Metadata webPage = new Metadata().setUri(new URI("http://localhost"));
 		Instance<XElement> instance = selector.init(webPage, data, false);
 
 		List<String> results = instance.select("//a/@href", DataConverter.BODY);
